--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,12 @@ body {
 }
 
 
+@media only screen and (max-width: 600px) {
+  .slick-next{
+    right: -12px !important;
+  }
+
+  .slick-prev{
+    left: -12px !important;
+  }
+}
